--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -23,7 +23,11 @@ jobs:
         run: |
           curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner.zip -d $HOME
-          export PATH="$HOME/sonar-scanner-4.8.0.2856-linux/bin:$PATH"
+          mv $HOME/sonar-scanner-4.8.0.2856-linux $HOME/sonar-scanner
+          echo "export PATH=$HOME/sonar-scanner/bin:$PATH" >> $GITHUB_ENV
+
+      - name: Verify SonarScanner Installation
+        run: sonar-scanner --version
 
       - name: Run SonarCloud scan
         env:
