--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -22,9 +22,10 @@ jobs:
       - name: Install SonarScanner
         run: |
           curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
-          unzip sonar-scanner.zip -d $HOME
-          mv $HOME/sonar-scanner-4.8.0.2856-linux $HOME/sonar-scanner
-          echo "export PATH=$HOME/sonar-scanner/bin:$PATH" >> $GITHUB_ENV
+          unzip sonar-scanner.zip
+          mv sonar-scanner-4.8.0.2856-linux $HOME/sonar-scanner
+          export PATH="$HOME/sonar-scanner/bin:$PATH"
+          echo "$HOME/sonar-scanner/bin" >> $GITHUB_PATH
 
       - name: Verify SonarScanner Installation
         run: sonar-scanner --version
