--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,6 +16,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Verify Java Version
+        run: java -version
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
