--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -19,11 +19,6 @@ jobs:
       - name: Verify Java Version
         run: java -version
 
-      - name: Set JAVA_HOME to Java 17
-        run: |
-          echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
-          echo "PATH=$JAVA_HOME/bin:$PATH" >> $GITHUB_ENV
-
       - name: Install SonarScanner
         run: |
           curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
@@ -31,23 +26,19 @@ jobs:
           mv sonar-scanner-4.8.0.2856-linux $HOME/sonar-scanner
           echo "$HOME/sonar-scanner/bin" >> $GITHUB_PATH
 
+      - name: Set JAVA_HOME explicitly for SonarScanner
+        run: |
+          echo "JAVA_HOME=$JAVA_HOME" >> $GITHUB_ENV
+          echo "PATH=$JAVA_HOME/bin:$PATH" >> $GITHUB_ENV
+
       - name: Force SonarScanner to use Java 17
         run: |
-          # Modify SonarScanner launch script to force use of JAVA_HOME
-          sed -i 's/^#export JAVA_HOME=.*/export JAVA_HOME=$JAVA_HOME/' $HOME/sonar-scanner/bin/sonar-scanner
-          sed -i 's/^#export PATH=.*/export PATH=$JAVA_HOME\/bin:$PATH/' $HOME/sonar-scanner/bin/sonar-scanner
-
-      - name: Verify SonarScanner Installation
-        run: sonar-scanner --version
-
-      - name: Run SonarCloud scan
-        env:
-          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-          SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          sonar-scanner \
+          # Ensure SonarScanner uses the system Java 17 instead of bundled Java 11
+          export JAVA_HOME=$JAVA_HOME
+          export PATH=$JAVA_HOME/bin:$PATH
+          $HOME/sonar-scanner/bin/sonar-scanner \
           -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
           -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }} \
           -Dsonar.host.url=https://sonarcloud.io \
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
