--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -21,14 +21,17 @@ jobs:
 
       - name: Install SonarScanner 5.x
         run: |
+          # Download SonarScanner CLI
           curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.0.330-linux.zip
-          # Verify if the file exists and is valid
-          if [[ -f sonar-scanner.zip ]]; then
+
+          # Check if the file is downloaded successfully
+          if [[ -s sonar-scanner.zip ]]; then
+            echo "File downloaded successfully, proceeding to unzip."
             unzip sonar-scanner.zip
             mv sonar-scanner-5.0.0.330-linux $HOME/sonar-scanner
             echo "$HOME/sonar-scanner/bin" >> $GITHUB_PATH
           else
-            echo "Download failed: sonar-scanner.zip not found or invalid."
+            echo "Error: The file was not downloaded correctly."
             exit 1
           fi
 
