--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,24 +1,19 @@
 name: SonarCloud SAST Analysis
-
 on:
-  workflow_dispatch:  # Allows manual triggering
-
+  workflow_dispatch: # Allows manual triggering
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '17'
-
       - name: Verify Java Version
         run: java -version
-
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         with:
