--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,23 +1,22 @@
-name: SonarCloud SAST Analysis
+name: SonarCloud Scan
+
 on:
-  workflow_dispatch: # Allows manual triggering
+  workflow_dispatch:  # This allows manual trigger via API or GitHub UI
+
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: '17'
-      - name: Verify Java Version
-        run: java -version
+
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
+        uses: sonarsource/sonarcloud-github-action@v2
         with:
-          sonar-project-key: random2
-          sonar-organization: dinoop91
+          args: >
+            -Dsonar.projectKey=random2
+            -Dsonar.organization=dinoop91
+            -Dsonar.host.url=https://sonarcloud.io
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
